# xstudio

./: .gitmodules  CMakeLists.txt  README.md  xstudio.sln  xstudio.vcxproj
about/: about.md
etc/: util.natvis
shaders/: compile-fs.bat  compile-gs.bat  compile-vs.bat  frag.glsl  frag_skel.glsl  frag_skin.glsl  frag_sph.glsl  geom_mpm.glsl  test.glsl  test.hlsl  test.hlsli  test2.glsl  vert.glsl  vert_mpm.glsl  vert_skel.glsl  vert_skin.glsl  vert_sph.glsl
shaders/spirv/: frag.spv  frag_skin.spv  geom_particle.spv  vert.spv  vert_particle.spv  vert_skel.spv  vert_skin.spv  vert_sph.spv
src/: NatvisFile.natvis  asset_loaders.cpp  asset_loaders.hpp  draw_item.cpp  draw_item.hpp  main.cpp  particles.cpp  particles.hpp  renderer.cpp  renderer.hpp  rhi.hpp  rhi_vk.cpp  scene.cpp  scene.hpp  sim.cpp  sim.hpp  skel.cpp  skel.hpp  util.hpp  xstudio.vcxproj  xstudio.vcxproj.filters
src/math/: math.hpp  meth.cpp
src/meth/: math.cpp  math.hpp  meth.cpp  meth.hpp  pcg32.hpp
src/rhi/: rhi.hpp  rhi_vk.cpp  rhi_vk.hpp  rhi_vk_win.cpp
src/script/: common.hpp  lex.ll  lex.yy.c  parse.yy  script.cpp  script.hpp  y.tab.c  y.tab.h
xstudio/: xstudio.vcxproj  xstudio.vcxproj.filters
